Fix alignment of div and paragraph

--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@ p {
 }
 a {
   text-decoration: none;
+  text-align: left;
   padding: 1em;
   margin-top: 1.5rem;
   border: 2px;
@@ -36,7 +37,6 @@ a:hover {
 section {
   display: inline-block;
   vertical-align: top;
-  text-align: center;
   color: #333;
   width: auto;
   max-width: 25em;
@@ -51,5 +51,10 @@ img {
 }
 
 body {
+  margin: 3rem;
   display: inline-block;
+}
+
+div {
+  text-align: center;
 }
